agregamos cosas al css y al html 2

--- a/Blogspot.html
+++ b/Blogspot.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            HYPERBLOG
+            <span id="tagline">TU BLOG DE CABECERA</span>
 
         </div>
         <div id="post">
